# m365mcp

./: .env.example  .gitignore  .npmignore  CLAUDE.md  CODEX_MCP_SETUP.md  LICENSE  M365_MCP_CAPABILITIES.md  README.md  claude_desktop_config.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: config.ts  crypto.ts  index.ts  mcp-server.ts  microsoft-auth.ts  microsoft-graph.ts  token-store.ts
src/m365_mcp/: __init__.py  audit.py  config.py  excel_workbook.py  helper_app.py  microsoft_auth.py  microsoft_graph.py  models.py  server.py  sharepoint_files.py  token_store.py
tests/: conftest.py  test_auth.py  test_config.py  test_crypto.py  test_excel_pilot.py  test_excel_workbook.py  test_graph.py  test_helper_app.py  test_mcp_server.py  test_npm_package.py  test_sharepoint_files.py
